# texeditor

./: CMakeLists.txt
note/: b1.txt  b2.txt
runtest/: tutorial.txt
src/: main.cpp
